--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">PTBKelompok3</string>
+    <string name="kp_main" />
+    <string name="btn_logbook" />
+    <string name="btn_seminar" />
 </resources>
