drawable resources, Dashboard Activity, Font

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="kp_main" />
     <string name="btn_logbook" />
     <string name="btn_seminar" />
+    <string name="btn_profil" />
 </resources>
